--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "dependencies": {
     "@google-cloud/language": "^4.1.1",
     "@msgpack/msgpack": "^2.2.0",
-    "lodash": "^4.17.20"
+    "chalk": "^4.1.0",
+    "lodash": "^4.17.20",
+    "prompts": "^2.3.2",
+    "yargs": "^16.0.3"
   },
   "devDependencies": {
-    "detect-character-encoding": "^0.8.0",
-    "iconv-lite": "^0.6.2",
     "junk": "^3.1.0",
     "sbd": "^1.0.18"
   }
